--- a/templates/index.html
+++ b/templates/index.html
@@ -7,6 +7,6 @@
 
 </head>
 <body>
-  <center><h1>Launcing Soon .....  </h1></center>
+  <center><h1 style="font-size:50vw"> .....  </h1></center>
 </body>
 </html>
