--- a/templates/index.html
+++ b/templates/index.html
@@ -4,9 +4,12 @@
   <title>ICMTEM</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-
+<style>
+  
+</style>
 </head>
 <body>
-  <center><h1 style="font-size:50vw"> .....  </h1></center>
+  <center>
+  <img id="im" class="img-fluid" src="https://512a4199-7d4f-4d1d-b7a9-02737829e099-00-1qmarolus5n29.pike.replit.dev:5000/static/com.jpg" width="500px"></center>
 </body>
 </html>
