--- a/templates/index.html
+++ b/templates/index.html
@@ -4,12 +4,37 @@
   <title>ICMTEM</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css" integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
 <style>
-  
+  body{
+    font-family:roboto;
+  }
+  h1{
+    text-transform:uppercase;
+  }
+  h3{
+    text-transform:uppercase;
+  }
 </style>
 </head>
 <body>
-  <center>
-  <img id="im" class="img-fluid" src="https://512a4199-7d4f-4d1d-b7a9-02737829e099-00-1qmarolus5n29.pike.replit.dev:5000/static/com.jpg" width="500px"></center>
+  <br><br>
+  {% include 'navbar.html' %}
+  <!-- <center>
+  <img id="im" class="img-fluid" src="https://512a4199-7d4f-4d1d-b7a9-02737829e099-00-1qmarolus5n29.pike.replit.dev:5000/static/com.jpg" width="500px"></center> -->
+  <!-- <div class="text-center container">
+    <br><br>
+    <h1>International conference on Modern Trends in Engineering and Management (ICMTEM-24)</h1>
+    <h2>Date: 02 April 2024</h2>
+    <h3>Organized By</h3>
+    <h3>Department of Electrical and Electronics Engineering</h3>
+    <h1>STELLA MARY'S COLLEGE OF ENGINEERING</h1>
+    <h3>In Association with</h3>
+    <h1>AB TECHNOLOGIES</h1>
+  </div> -->
+  
 </body>
+  <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.min.js" integrity="sha384-+sLIOodYLS7CIrQpBjl+C7nPvqq+FbNUBDunl/OZv93DB7Ln/533i8e/mZXLi/P+" crossorigin="anonymous"></script>
 </html>
