--- a/templates/index.html
+++ b/templates/index.html
@@ -19,9 +19,8 @@
 </head>
 <body>
   <br><br>
-  {% include 'navbar.html' %}
-  <!-- <center>
-  <img id="im" class="img-fluid" src="https://512a4199-7d4f-4d1d-b7a9-02737829e099-00-1qmarolus5n29.pike.replit.dev:5000/static/com.jpg" width="500px"></center> -->
+  <center>
+  <img id="im" class="img-fluid" src="https://512a4199-7d4f-4d1d-b7a9-02737829e099-00-1qmarolus5n29.pike.replit.dev:5000/static/com.jpg" width="500px"></center>
   <!-- <div class="text-center container">
     <br><br>
     <h1>International conference on Modern Trends in Engineering and Management (ICMTEM-24)</h1>
