--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -91,24 +91,79 @@
         &nbsp;
         <!-- &nbsp;&nbsp;&nbsp;&nbsp;  -->
      
-        <li class="nav-item">
-
-        <a class="nav-link text-dark" href="importantdates">Important Dates</a>
-
-      </li>
-        &nbsp;
+        
         <!-- &nbsp;     &nbsp;&nbsp;&nbsp;  -->
         
         
            
         
+        <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle text-dark" href="#" role="button" data-toggle="dropdown" aria-expanded="false">
+           Submission
+          </a>
+          <div class="dropdown-menu">
+            <a class="dropdown-item" href="#">Action</a>
+            <a class="dropdown-item" href="#">Another action</a>
+            <div class="dropdown-divider"></div>
+            <a class="dropdown-item" href="#">Something else here</a>
+          </div>
+        </li>
+        &nbsp;
+
+
+        <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle text-dark" href="#" role="button" data-toggle="dropdown" aria-expanded="false">
+           Registration
+          </a>
+          <div class="dropdown-menu">
+            <a class="dropdown-item" href="#">Action</a>
+            <a class="dropdown-item" href="#">Another action</a>
+            <div class="dropdown-divider"></div>
+            <a class="dropdown-item" href="#">Something else here</a>
+          </div>
+        </li>
+        &nbsp;
+        
         <li class="nav-item">
 
-          <a class="nav-link text-dark" href="contactus">Contact us</a>
+          <a class="nav-link text-dark" href="importantdates">Journal</a>
 
         </li>
+          &nbsp;
         
           <!-- &nbsp;     &nbsp; -->
+        <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle text-dark" href="#" role="button" data-toggle="dropdown" aria-expanded="false">
+           Sponsor
+          </a>
+          <div class="dropdown-menu">
+            <a class="dropdown-item" href="#">Action</a>
+            <a class="dropdown-item" href="#">Another action</a>
+            <div class="dropdown-divider"></div>
+            <a class="dropdown-item" href="#">Something else here</a>
+          </div>
+        </li>
+        &nbsp;
+
+        <li class="nav-item">
+
+          <a class="nav-link text-dark" href="importantdates">Award</a>
+
+        </li>
+          &nbsp;
+        <li class="nav-item">
+
+          <a class="nav-link text-dark" href="importantdates">Venue</a>
+
+        </li>
+          &nbsp;
+        <li class="nav-item">
+
+          <a class="nav-link text-dark" href="importantdates">Contactus</a>
+
+        </li>
+          &nbsp;
+        
 
         </ul>
    
