--- a/templates/index.html
+++ b/templates/index.html
@@ -18,10 +18,10 @@
 </style>
 </head>
 <body>
-  <br><br>
+  
   <center>
   <img id="im" class="img-fluid" src="https://512a4199-7d4f-4d1d-b7a9-02737829e099-00-1qmarolus5n29.pike.replit.dev:5000/static/com.jpg" width="500px"></center>
-  <!-- <div class="text-center container">
+  <!-- <div class="text-center container bg-info">
     <br><br>
     <h1>International conference on Modern Trends in Engineering and Management (ICMTEM-24)</h1>
     <h2>Date: 02 April 2024</h2>
