--- a/templates/index.html
+++ b/templates/index.html
@@ -5,24 +5,42 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css" integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
-<style>
-  body{
-    font-family:roboto;
-  }
+  <link rel="stylesheet" href="static/style.css">
+  <style>
+ 
   h1{
     text-transform:uppercase;
   }
   h3{
     text-transform:uppercase;
   }
+
+  .main{
+    background-image:linear-gradient(rgba(0,0,0,0.50),rgba(48, 25, 25, 0.50)),url('static/home.jpg');
+    background-size: cover;
+    background-position: center;
+    width: 100%;
+    color: white;
+    font-weight:900;
+    display: flex;
+    flex-direction: column;
+    align-items:center;
+    justify-content:center;
+    
+  }
 </style>
 </head>
 <body>
   
-  <center>
-  <img id="im" class="img-fluid" src="https://512a4199-7d4f-4d1d-b7a9-02737829e099-00-1qmarolus5n29.pike.replit.dev:5000/static/com.jpg" width="500px"></center>
-  <!-- <div class="text-center container bg-info">
-    <br><br>
+  <div class="mt-3">
+  <marquee ><h5>Dates to Remember: Full Paper Submission: 26th March 2024 | Registration Deadline: 30th March 2024 | Camera ready paper submission: 31st March 2024</h5></marquee>
+</div>
+
+  
+  {% include 'navbar.html' %}
+  <div class="main text-center container-fluid" >
+    <br>
+    <br>
     <h1>International conference on Modern Trends in Engineering and Management (ICMTEM-24)</h1>
     <h2>Date: 02 April 2024</h2>
     <h3>Organized By</h3>
@@ -30,8 +48,99 @@
     <h1>STELLA MARY'S COLLEGE OF ENGINEERING</h1>
     <h3>In Association with</h3>
     <h1>AB TECHNOLOGIES</h1>
-  </div> -->
-  
+    <img src="static/ablg.png" width="240px">
+  <br>
+    <br>
+  </div>
+  <br><br><br>
+<div class="container">
+  <h1 >ABOUT ICMTEM 2024</h1>
+  <br>
+  <p style="text-align: justify;">Recent developments in the fields of science, technology and engineering have contributed to an explosion of innovation in a wide variety of industries, including new product development and manufacturing, design and optimisation techniques, renewable energy, embedded technologies, smart grids,  robotics, structures and construction, big data, remote sensing and geographic information systems. The prestigious "ICMTEM 2024" conference seeks to provide a superior international platform for academics, researchers, engineers, industry participants, and students from all over the world to exchange experiences and research findings.  Energy-effective green technologies are being investigated to provide cost-effective solutions and better outputs across multiple sectors. The purpose of this conference is to explore new technologies and advances in science and engineering for superior engineering solutions by bringing together academics, researchers, and specialists from connected industries in a shared platform. Researchers will use this conference as a forum to showcase the results and discoveries of their work. Participants in this conference are invited from all over the world, including practicing engineers, academicians from various universities and engineering institutes, scientists from R&D institutions, research scholars, and postgraduate students.</p>
+</div>
+<br><br>
+<div class="container">
+<div class="row">
+  <div class="col-md-9">
+      <h1>Objectives of the Conference</h1>
+      <br>
+      <p style="text-align: justify;">Knowledge Sharing: ICMTEM-24 aims to facilitate knowledge sharing among academicians, researchers, and experts from related industries. It provides a common forum for exploration of emerging technologies and innovations in engineering and science.</p>
+  <p style="text-align: justify;">Sustainable Development: The conference focuses on sustainable development through digital transformation, innovations, and modernized technologies. It aims to promote global scientific collaborations and community partnerships.</p>
+  <p style="text-align: justify;">Environmental Responsibility: ICMTEM-24 recognizes the importance of environmental responsibility in modern business sectors.</p>
+  <p style="text-align: justify;">Economic Efficiency: The conference explores economic efficiency in various domains.</p>
+  <p style="text-align: justify;">Social Solidarity: ICMTEM-24 encourages social solidarity and responsible actions.</p>
+    <p style="text-align: justify;">Digital Transformations: The achievement of sustainable development through digital transformation is a key theme.</p>
+<p style="text-align: justify;">Researchers, practicing engineers, academicians, scientists, and postgraduate students from all over the globe are invited to participate in this conference. It provides a platform to present research findings, discuss innovations, and foster collaboration.</p>
+</div> 
+  <div class="col-md-3">
+    <h3>IMPORTANT DATES</h3>
+    <br>
+    <div class=" bg-info text-center" style="padding:50px">
+      <h5>Full Paper Submission:<br> 26th March 2024 </h5>
+    </div>
+    <br>
+    <div class=" bg-info text-center" style="padding:50px">
+      <h5>Registration Deadline: <br>30th March 2024</h5>
+    </div>
+    <br>
+    <div class="bg-info text-center" style="padding:50px">
+      <h5>Camera ready paper submission: <br>31st March 2024</h5>
+    </div>
+    
+  </div>
+
+</div>
+</div>
+<br><br><br>
+
+
+<div class="container">
+  <div class="row">
+    <div class="col-md-9">
+      <h1>ABOUT COLLEGE</h1>
+      <br>
+      <p style="text-align: justify;">Stella Mary’s College of Engineering is promoted by the Nova Educational Trust & established by the well-known business entrepreneur of Kanyakumari District, Dr. Nazareth Charles. The college is located amidst a beautiful eco-friendly atmosphere surrounded by coconut groves. The college is only miles away from the Azhikal Sea Shore, Manavalakurichy, Kanyakumari District, Tamil Nadu. Stella Mary’s College of Engineering offers Bachelors Degree Programmes in the branches of Artificial Intelligence & Data Science, Civil Engineering, Computer Science and Engineering, Electrical and Electronics Engineering, Electronics and Communication Engineering and Mechanical Engineering etc.</p>
+    </div>
+  </div>
+</div>
+
+<br><br><br><br>
+
+
+
+
+<div class="jumbotron">
+  <br><br>
+  <div class="container ">
+  <div class="row">
+    <div class="col-md-4 " style="padding-top:30px">
+      <img src="static/ablg.png" width="140px"><br><br>
+      <p style="text-align: justify;">ICMTEM-2024 The International Conference on Modern Trends in Engineering and Management (ICMTEM 2024) will be held on 02th April 2024 at Stella Mary’s College of Engineering, Kanyakumari, India.</p>
+
+    </div>
+    <div class="col-md-4 " style="padding-left: 40px;padding-top:30px">
+      <p>CONTACT US:</p>
+      <p>Program Manager (AB TECHNOLOGIES)</p>
+      <p>ICMTEM - 2024 | Kanyakumari, India</p>
+      <p>Call: +91 9840511458</p>
+      <p>WhatsApp: +91 9840511458</p>
+      <p>Email: icmtem2024@gmail.com</p>
+
+    </div>
+    <div class="col-md-4 bg-light" style="padding:10px;">
+      <h5>Venue</h5>
+      <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3949.683783072304!2d77.33839087021896!3d8.133639684476929!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3b04fae7b453d579%3A0xf4356d0b26d3dd2a!2sStella%20Mary&#39;s%20College%20Of%20Engineering!5e0!3m2!1sen!2sin!4v1709724089173!5m2!1sen!2sin" width="100%" height="250px" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+
+    </div>
+  </div>
+</div>
+<br><br>
+</div>
+<br><br>
+<a href="static/IJATEM PAPER TEMPLATE.docx" download>Download Word Document</a>
+
+
+
 </body>
   <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
