--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-lg navbar-dark   text-white" style="background-image:linear-gradient(#37ecba,#37ecba);font-weight:900">
+<nav class="navbar navbar-expand-lg navbar-dark   " style="background-image:linear-gradient(#2071a0,#266d96);font-weight:900;">
 
   
 
@@ -29,7 +29,7 @@
 
           <li class="nav-item">
 
-            <a class="nav-link text-dark" href="/">Home  </a>
+            <a class="nav-link text-white" href="/">Home  </a>
 
           </li>
         &nbsp;
@@ -37,28 +37,32 @@
           <!-- &nbsp;     &nbsp;&nbsp; &nbsp;      -->
 
         <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle text-dark" href="#" role="button" data-toggle="dropdown" aria-expanded="false">
+          <a class="nav-link dropdown-toggle text-white" href="#" role="button" data-toggle="dropdown" aria-expanded="false">
            About
           </a>
           <div class="dropdown-menu">
-            <a class="dropdown-item" href="#">Action</a>
-            <a class="dropdown-item" href="#">Another action</a>
+            <a class="dropdown-item" href="/abicmtem">ABOUT ICMTEM</a>
             <div class="dropdown-divider"></div>
-            <a class="dropdown-item" href="#">Something else here</a>
+            <a class="dropdown-item" href="/ababtech">ABOUT AB TECHNOLOGIES</a>
+            <div class="dropdown-divider"></div>
+            <a class="dropdown-item" href="/abstella">ABOUT COLLEGE</a>
           </div>
         </li>
         &nbsp;
           <!-- &nbsp;     &nbsp;&nbsp;&nbsp;  -->
         
         <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle text-dark" href="#" role="button" data-toggle="dropdown" aria-expanded="false">
+          <a class="nav-link dropdown-toggle text-white" href="#" role="button" data-toggle="dropdown" aria-expanded="false">
            Conference Details
           </a>
           <div class="dropdown-menu">
-            <a class="dropdown-item" href="#">Action</a>
-            <a class="dropdown-item" href="#">Another action</a>
+            <a class="dropdown-item" href="/callforpaper">Call For Paper</a>
             <div class="dropdown-divider"></div>
-            <a class="dropdown-item" href="#">Something else here</a>
+            <a class="dropdown-item" href="/scientific">Scientific Program</a>
+            <div class="dropdown-divider"></div>
+            <a class="dropdown-item" href="/wca">Who Can Attend</a>
+            <div class="dropdown-divider"></div>
+            <a class="dropdown-item" href="/nta">Need To Attend</a>
           </div>
         </li>
         &nbsp;
@@ -69,7 +73,7 @@
     
 
         <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle text-dark" href="#" role="button" data-toggle="dropdown" aria-expanded="false">
+          <a class="nav-link dropdown-toggle text-white" href="#" role="button" data-toggle="dropdown" aria-expanded="false">
             Committe
           </a>
           <div class="dropdown-menu">
@@ -85,7 +89,7 @@
 
         <li class="nav-item">
 
-          <a class="nav-link text-dark" href="registrationandpayments">Keynotespeakers</a>
+          <a class="nav-link text-white" href="registrationandpayments">Keynotespeakers</a>
 
         </li>
         &nbsp;
@@ -98,20 +102,27 @@
            
         
         <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle text-dark" href="#" role="button" data-toggle="dropdown" aria-expanded="false">
+          <a class="nav-link dropdown-toggle text-white" href="#" role="button" data-toggle="dropdown" aria-expanded="false">
            Submission
           </a>
           <div class="dropdown-menu">
-            <a class="dropdown-item" href="#">Action</a>
-            <a class="dropdown-item" href="#">Another action</a>
+            <a class="dropdown-item" href="/papersub">Paper Submission</a>
             <div class="dropdown-divider"></div>
-            <a class="dropdown-item" href="#">Something else here</a>
+            <a class="dropdown-item" href="/presentationguide">Presentation Guidelines</a>
+          
+            
           </div>
         </li>
         &nbsp;
 
+        <li class="nav-item">
 
-        <li class="nav-item dropdown">
+          <a class="nav-link text-white" href="/registration">Registration  </a>
+
+        </li>
+      &nbsp;
+
+        <!-- <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle text-dark" href="#" role="button" data-toggle="dropdown" aria-expanded="false">
            Registration
           </a>
@@ -122,18 +133,18 @@
             <a class="dropdown-item" href="#">Something else here</a>
           </div>
         </li>
-        &nbsp;
+        &nbsp; -->
         
         <li class="nav-item">
 
-          <a class="nav-link text-dark" href="importantdates">Journal</a>
+          <a class="nav-link text-white" href="/journals">Journals</a>
 
         </li>
           &nbsp;
         
           <!-- &nbsp;     &nbsp; -->
         <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle text-dark" href="#" role="button" data-toggle="dropdown" aria-expanded="false">
+          <a class="nav-link dropdown-toggle text-white" href="#" role="button" data-toggle="dropdown" aria-expanded="false">
            Sponsor
           </a>
           <div class="dropdown-menu">
@@ -147,19 +158,19 @@
 
         <li class="nav-item">
 
-          <a class="nav-link text-dark" href="importantdates">Award</a>
+          <a class="nav-link text-white" href="/awards">Awards</a>
 
         </li>
           &nbsp;
         <li class="nav-item">
 
-          <a class="nav-link text-dark" href="importantdates">Venue</a>
+          <a class="nav-link text-white" href="importantdates">Venue</a>
 
         </li>
           &nbsp;
         <li class="nav-item">
 
-          <a class="nav-link text-dark" href="importantdates">Contactus</a>
+          <a class="nav-link text-white" href="importantdates">Contactus</a>
 
         </li>
           &nbsp;
