--- a/templates/index.html
+++ b/templates/index.html
@@ -16,7 +16,7 @@
   }
 
   .main{
-    background-image:linear-gradient(rgba(0,0,0,0.50),rgba(48, 25, 25, 0.50)),url('static/home.jpg');
+    background-image:linear-gradient(rgba(0,0,0,0.60),rgba(0, 0, 0, 0.60)),url('static/home.jpg');
     background-size: cover;
     background-position: center;
     width: 100%;
@@ -41,7 +41,8 @@
   <div class="main text-center container-fluid" >
     <br>
     <br>
-    <h1>International conference on Modern Trends in Engineering and Management (ICMTEM-24)</h1>
+    <div class="container">
+    <h1 style="text-shadow: 2px 2px 4px #000000;">International conference on Modern Trends in Engineering and Management (ICMTEM-24)</h1>
     <h2>Date: 02 April 2024</h2>
     <h3>Organized By</h3>
     <h3>Department of Electrical and Electronics Engineering</h3>
@@ -49,6 +50,7 @@
     <h3>In Association with</h3>
     <h1>AB TECHNOLOGIES</h1>
     <img src="static/ablg.png" width="240px">
+  </div>
   <br>
     <br>
   </div>
@@ -56,14 +58,15 @@
 <div class="container">
   <h1 >ABOUT ICMTEM 2024</h1>
   <br>
-  <p style="text-align: justify;">Recent developments in the fields of science, technology and engineering have contributed to an explosion of innovation in a wide variety of industries, including new product development and manufacturing, design and optimisation techniques, renewable energy, embedded technologies, smart grids,  robotics, structures and construction, big data, remote sensing and geographic information systems. The prestigious "ICMTEM 2024" conference seeks to provide a superior international platform for academics, researchers, engineers, industry participants, and students from all over the world to exchange experiences and research findings.  Energy-effective green technologies are being investigated to provide cost-effective solutions and better outputs across multiple sectors. The purpose of this conference is to explore new technologies and advances in science and engineering for superior engineering solutions by bringing together academics, researchers, and specialists from connected industries in a shared platform. Researchers will use this conference as a forum to showcase the results and discoveries of their work. Participants in this conference are invited from all over the world, including practicing engineers, academicians from various universities and engineering institutes, scientists from R&D institutions, research scholars, and postgraduate students.</p>
+  <p style="text-align: justify;line-height: 200%;font-size:1.3vw">Recent developments in the fields of science, technology and engineering have contributed to an explosion of innovation in a wide variety of industries, including new product development and manufacturing, design and optimisation techniques, renewable energy, embedded technologies, smart grids,  robotics, structures and construction, big data, remote sensing and geographic information systems. The prestigious "ICMTEM 2024" conference seeks to provide a superior international platform for academics, researchers, engineers, industry participants, and students from all over the world to exchange experiences and research findings.  Energy-effective green technologies are being investigated to provide cost-effective solutions and better outputs across multiple sectors. The purpose of this conference is to explore new technologies and advances in science and engineering for superior engineering solutions by bringing together academics, researchers, and specialists from connected industries in a shared platform. Researchers will use this conference as a forum to showcase the results and discoveries of their work. Participants in this conference are invited from all over the world, including practicing engineers, academicians from various universities and engineering institutes, scientists from R&D institutions, research scholars, and postgraduate students.</p>
 </div>
 <br><br>
 <div class="container">
 <div class="row">
-  <div class="col-md-9">
+  <div class="col-md-9" style="line-height: 200%;">
       <h1>Objectives of the Conference</h1>
       <br>
+      <div style="font-size:1.3vw">
       <p style="text-align: justify;">Knowledge Sharing: ICMTEM-24 aims to facilitate knowledge sharing among academicians, researchers, and experts from related industries. It provides a common forum for exploration of emerging technologies and innovations in engineering and science.</p>
   <p style="text-align: justify;">Sustainable Development: The conference focuses on sustainable development through digital transformation, innovations, and modernized technologies. It aims to promote global scientific collaborations and community partnerships.</p>
   <p style="text-align: justify;">Environmental Responsibility: ICMTEM-24 recognizes the importance of environmental responsibility in modern business sectors.</p>
@@ -71,6 +74,7 @@
   <p style="text-align: justify;">Social Solidarity: ICMTEM-24 encourages social solidarity and responsible actions.</p>
     <p style="text-align: justify;">Digital Transformations: The achievement of sustainable development through digital transformation is a key theme.</p>
 <p style="text-align: justify;">Researchers, practicing engineers, academicians, scientists, and postgraduate students from all over the globe are invited to participate in this conference. It provides a platform to present research findings, discuss innovations, and foster collaboration.</p>
+</div>
 </div> 
   <div class="col-md-3">
     <h3>IMPORTANT DATES</h3>
@@ -96,10 +100,10 @@
 
 <div class="container">
   <div class="row">
-    <div class="col-md-9">
+    <div class="col-md-9" style="line-height: 200%;">
       <h1>ABOUT COLLEGE</h1>
       <br>
-      <p style="text-align: justify;">Stella Mary’s College of Engineering is promoted by the Nova Educational Trust & established by the well-known business entrepreneur of Kanyakumari District, Dr. Nazareth Charles. The college is located amidst a beautiful eco-friendly atmosphere surrounded by coconut groves. The college is only miles away from the Azhikal Sea Shore, Manavalakurichy, Kanyakumari District, Tamil Nadu. Stella Mary’s College of Engineering offers Bachelors Degree Programmes in the branches of Artificial Intelligence & Data Science, Civil Engineering, Computer Science and Engineering, Electrical and Electronics Engineering, Electronics and Communication Engineering and Mechanical Engineering etc.</p>
+      <p style="text-align: justify;font-size:1.3vw0">Stella Mary’s College of Engineering is promoted by the Nova Educational Trust & established by the well-known business entrepreneur of Kanyakumari District, Dr. Nazareth Charles. The college is located amidst a beautiful eco-friendly atmosphere surrounded by coconut groves. The college is only miles away from the Azhikal Sea Shore, Manavalakurichy, Kanyakumari District, Tamil Nadu. Stella Mary’s College of Engineering offers Bachelors Degree Programmes in the branches of Artificial Intelligence & Data Science, Civil Engineering, Computer Science and Engineering, Electrical and Electronics Engineering, Electronics and Communication Engineering and Mechanical Engineering etc.</p>
     </div>
   </div>
 </div>
