--- a/templates/papersub.html
+++ b/templates/papersub.html
@@ -18,10 +18,28 @@
             <div><h1 style="color: azure;">PAPER SUBMISSION</h1></div>
         </div>
 <br><br><br>
-<div class="container">
-<h1>PAPER SUBMISSION GUIDELINES</h1><br>
-<p style="text-align: justify;">Papers should be 8 pages and follow the ICMTEM-24 conference paper template. The purpose of a conference template is to provide a consistent format for papers appearing in the conference proceedings.  ICMTEM-24 strongly encourages use of the conference manuscript templates provided below.</p>
+<div  class="jumbotron container" style="padding: 40px;">
+  <h1 class="text-center">PAPER SUBMISSION GUIDELINES</h1><hr class="bg-dark"><br>
+  
+<center>
+<p style="text-align:start;font-size:1.5vw;line-height:200%;padding-left:10px">&#9733;Papers should be 8 pages and follow the ICMTEM-24 conference paper template. <br>&#9733;The purpose of a conference template is to provide a consistent format for papers appearing in the conference proceedings. <br>&#9733; ICMTEM-24 strongly encourages use of the conference manuscript templates provided below.</p>
+</center>
+</div>
 
+
+
+<div class="container  " style="padding:40px">
+  <center>
+  <h2>Submission Mail Address</h2>
+  <h2 class="text-primary">icmtem2024@gmail.com</h2>
+</center>
+</div>
+
+<div class=" container" style="padding:40px">
+  
+  <center>
+  <h4 >Click below to download the Template </h4><button class="btn btn-lg btn-primary"><a class="text-white" href="static/IJATEM PAPER TEMPLATE.docx ">DOWNLOAD NOW</a></button>
+</center>
 </div>
 
 <br><br><br><br>
@@ -57,7 +75,6 @@
 </div>
 <br><br>
 </div>
-<br><br>
 </body>
 <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
