--- a/templates/index.html
+++ b/templates/index.html
@@ -16,7 +16,7 @@
   }
 
   .main{
-    background-image:linear-gradient(rgba(0,0,0,0.60),rgba(0, 0, 0, 0.60)),url('static/home.jpg');
+    background-image:linear-gradient(rgba(0,0,0,0.60),rgba(0, 0, 0, 0.60)),url('static/images/home.jpg');
     background-size: cover;
     background-position: center;
     width: 100%;
@@ -39,55 +39,54 @@
   
   {% include 'navbar.html' %}
   <div class="main text-center container-fluid" >
-    <br>
-    <br>
-    <div class="container">
-    <h1 style="text-shadow: 2px 2px 4px #000000;">International conference on Modern Trends in Engineering and Management (ICMTEM-24)</h1>
-    <h2>Date: 02 April 2024</h2>
-    <h3>Organized By</h3>
-    <h3>Department of Electrical and Electronics Engineering</h3>
-    <h1>STELLA MARY'S COLLEGE OF ENGINEERING</h1>
-    <h3>In Association with</h3>
-    <h1>AB TECHNOLOGIES</h1>
-    <img src="static/ablg.png" width="240px">
+   <br><br>
+    <div class="container" >
+    <h1 style="text-shadow: 2px 2px 4px #000000;font-weight:900;">International conference on Modern Trends in Engineering and Management (ICMTEM-24)</h1><br>
+    <h2 style="color:rgb(252 181 20);font-weight:900;">DATE: 02 APRIL 2024</h2><br>
+    <h3 style="font-weight:900;">Organized By</h3><br>
+    <h3 style="text-shadow: 2px 2px 4px #000000;font-weight:900;">Department of Electrical and Electronics Engineering</h3><br>
+    <h1 style="text-shadow: 2px 2px 4px #000000;font-weight:900;">STELLA MARY'S COLLEGE OF ENGINEERING</h1><br>
+    <h3 style="font-weight:900;color:rgb(252 181 20);">In Association with</h3><br>
+    <h1 style="text-shadow: 2px 2px 4px #000000;font-weight:900;">AB TECHNOLOGIES</h1><br>
+    <img src="static/images/ablg.png" width="240px">
   </div>
   <br>
     <br>
   </div>
   <br><br><br>
 <div class="container">
-  <h1 >ABOUT ICMTEM 2024</h1>
+  <h1 style="font-weight:900;text-shadow: 2px 2px 4px #000000;">ABOUT ICMTEM 2024</h1>
   <br>
-  <p style="text-align: justify;line-height: 200%;font-size:1.3vw">Recent developments in the fields of science, technology and engineering have contributed to an explosion of innovation in a wide variety of industries, including new product development and manufacturing, design and optimisation techniques, renewable energy, embedded technologies, smart grids,  robotics, structures and construction, big data, remote sensing and geographic information systems. The prestigious "ICMTEM 2024" conference seeks to provide a superior international platform for academics, researchers, engineers, industry participants, and students from all over the world to exchange experiences and research findings.  Energy-effective green technologies are being investigated to provide cost-effective solutions and better outputs across multiple sectors. The purpose of this conference is to explore new technologies and advances in science and engineering for superior engineering solutions by bringing together academics, researchers, and specialists from connected industries in a shared platform. Researchers will use this conference as a forum to showcase the results and discoveries of their work. Participants in this conference are invited from all over the world, including practicing engineers, academicians from various universities and engineering institutes, scientists from R&D institutions, research scholars, and postgraduate students.</p>
+  <p style="text-align: justify;line-height: 200%;font-size:1.3vw;text-indent:100px">Recent developments in the fields of science, technology and engineering have contributed to an explosion of innovation in a wide variety of industries, including new product development and manufacturing, design and optimisation techniques, renewable energy, embedded technologies, smart grids,  robotics, structures and construction, big data, remote sensing and geographic information systems. The prestigious "ICMTEM 2024" conference seeks to provide a superior international platform for academics, researchers, engineers, industry participants, and students from all over the world to exchange experiences and research findings.  Energy-effective green technologies are being investigated to provide cost-effective solutions and better outputs across multiple sectors. The purpose of this conference is to explore new technologies and advances in science and engineering for superior engineering solutions by bringing together academics, researchers, and specialists from connected industries in a shared platform. Researchers will use this conference as a forum to showcase the results and discoveries of their work. Participants in this conference are invited from all over the world, including practicing engineers, academicians from various universities and engineering institutes, scientists from R&D institutions, research scholars, and postgraduate students.</p>
 </div>
 <br><br>
 <div class="container">
 <div class="row">
   <div class="col-md-9" style="line-height: 200%;">
-      <h1>Objectives of the Conference</h1>
+      <h1 style="font-weight:900;text-shadow: 2px 2px 4px #000000;">Objectives of the Conference</h1>
       <br>
-      <div style="font-size:1.3vw">
-      <p style="text-align: justify;">Knowledge Sharing: ICMTEM-24 aims to facilitate knowledge sharing among academicians, researchers, and experts from related industries. It provides a common forum for exploration of emerging technologies and innovations in engineering and science.</p>
-  <p style="text-align: justify;">Sustainable Development: The conference focuses on sustainable development through digital transformation, innovations, and modernized technologies. It aims to promote global scientific collaborations and community partnerships.</p>
-  <p style="text-align: justify;">Environmental Responsibility: ICMTEM-24 recognizes the importance of environmental responsibility in modern business sectors.</p>
-  <p style="text-align: justify;">Economic Efficiency: The conference explores economic efficiency in various domains.</p>
-  <p style="text-align: justify;">Social Solidarity: ICMTEM-24 encourages social solidarity and responsible actions.</p>
-    <p style="text-align: justify;">Digital Transformations: The achievement of sustainable development through digital transformation is a key theme.</p>
+      <div style="font-size:1.3vw;padding-left:40px">
+      <p style="text-align: justify;"><b>Knowledge Sharing:</b> ICMTEM-24 aims to facilitate knowledge sharing among academicians, researchers, and experts from related industries. It provides a common forum for exploration of emerging technologies and innovations in engineering and science.</p>
+  <p style="text-align: justify;"><b>Sustainable Development:</b> The conference focuses on sustainable development through digital transformation, innovations, and modernized technologies. It aims to promote global scientific collaborations and community partnerships.</p>
+  <p style="text-align: justify;"><b>Environmental Responsibility:</b> ICMTEM-24 recognizes the importance of environmental responsibility in modern business sectors.</p>
+  <p style="text-align: justify;"><b>Economic Efficiency:</b> The conference explores economic efficiency in various domains.</p>
+  <p style="text-align: justify;" ><b>Social Solidarity:</b> ICMTEM-24 encourages social solidarity and responsible actions.</p>
+    <p style="text-align: justify;"><b>Digital Transformations:</b> The achievement of sustainable development through digital transformation is a key theme.</p>
 <p style="text-align: justify;">Researchers, practicing engineers, academicians, scientists, and postgraduate students from all over the globe are invited to participate in this conference. It provides a platform to present research findings, discuss innovations, and foster collaboration.</p>
 </div>
 </div> 
-  <div class="col-md-3">
-    <h3>IMPORTANT DATES</h3>
+  <div class="col-md-3" style="padding-top:18px">
+    <h3 style="font-weight:900;font-size:1.8vw">IMPORTANT DATES</h3>
     <br>
-    <div class=" bg-info text-center" style="padding:50px">
+    <div class="  text-center text-white" style="padding:50px;background-image:linear-gradient(#A83279,#A83279)">
       <h5>Full Paper Submission:<br> 26th March 2024 </h5>
     </div>
     <br>
-    <div class=" bg-info text-center" style="padding:50px">
+    <div class=" bg-info text-center text-white" style="padding:50px;background-image:linear-gradient(#A83279,#A83279)">
       <h5>Registration Deadline: <br>30th March 2024</h5>
     </div>
     <br>
-    <div class="bg-info text-center" style="padding:50px">
+    <div class="bg-info text-center text-white" style="padding:50px;background-image:linear-gradient(#A83279,#A83279)">
       <h5>Camera ready paper submission: <br>31st March 2024</h5>
     </div>
     
@@ -101,9 +100,21 @@
 <div class="container">
   <div class="row">
     <div class="col-md-9" style="line-height: 200%;">
-      <h1>ABOUT COLLEGE</h1>
+      <h1 style="font-weight:900;text-shadow: 2px 2px 4px #000000;">ABOUT COLLEGE</h1>
       <br>
-      <p style="text-align: justify;font-size:1.3vw0">Stella Mary’s College of Engineering is promoted by the Nova Educational Trust & established by the well-known business entrepreneur of Kanyakumari District, Dr. Nazareth Charles. The college is located amidst a beautiful eco-friendly atmosphere surrounded by coconut groves. The college is only miles away from the Azhikal Sea Shore, Manavalakurichy, Kanyakumari District, Tamil Nadu. Stella Mary’s College of Engineering offers Bachelors Degree Programmes in the branches of Artificial Intelligence & Data Science, Civil Engineering, Computer Science and Engineering, Electrical and Electronics Engineering, Electronics and Communication Engineering and Mechanical Engineering etc.</p>
+      <p style="text-align: justify;font-size:1.3vw;line-height: 200%;text-indent:50px">Stella Mary's College of Engineering is founded and overseen by the Nova Educational Trust, under the leadership of Dr. Nazareth Charles, a respected business entrepreneur in Kanyakumari District. Dr. Charles, an Engineer by profession, is renowned for his philanthropic efforts aimed at uplifting the less fortunate, particularly women and the underprivileged members of society. Dedicated to creating skilled professionals with integrity, the institution strives to contribute to the nation and industry.</p>
+        <p style="text-align: justify;font-size:1.3vw;line-height: 200%;text-indent:50px">
+      The college provides a nurturing environment conducive to academic excellence, fostering leadership skills, and addressing all aspects essential for a successful career. Stella Mary's boasts cutting-edge infrastructure and is committed to delivering education structured around specific goals, systematically mapping and evaluating students' performance to develop their knowledge and skills.</p>
+     <p style="text-align: justify;font-size:1.3vw;line-height: 200%;text-indent:50px"> Stella Mary's College of Engineering adheres to global standards in teaching and research, demonstrating an unwavering commitment to excellence in nurturing innovative and entrepreneurial skills. This dedication has earned the institution accreditation from NAAC (National Assessment and Accreditation Council) for the overall institution and NBA (National Board of Accreditation) for the Departments of Mechanical Engineering and Computer Science Engineering within just nine years of its establishment.</p>
+      <p style="text-align: justify;font-size:1.3vw;line-height: 200%;">The college has maintained an outstanding placement record, providing ample opportunities for students to achieve their career aspirations, including placements at the international level.</p>
+    </div>
+    <div class="col-md-3">
+      <div >
+        <img src="static/images/CLG IMAGE 2.jpg" style="object-fit:cover;width:100%;height:350px">
+      </div> 
+      <div >
+        <img src="static/images/CLG IMAGE 1.jpg" style="object-fit:cover;width:100%;height:350px">
+      </div>
     </div>
   </div>
 </div>
@@ -113,7 +124,7 @@
 
 
 
-<div class="jumbotron">
+<div class="jumbotron" style="margin:0px">
   <br><br>
   <div class="container ">
   <div class="row">
@@ -122,9 +133,10 @@
       <p style="text-align: justify;">ICMTEM-2024 The International Conference on Modern Trends in Engineering and Management (ICMTEM 2024) will be held on 02th April 2024 at Stella Mary’s College of Engineering, Kanyakumari, India.</p>
 
     </div>
-    <div class="col-md-4 " style="padding-left: 40px;padding-top:30px">
-      <p>CONTACT US:</p>
-      <p>Program Manager (AB TECHNOLOGIES)</p>
+    <div class="col-md-4 " style="padding-left: 40px;padding-top: 30px">
+
+      <h2 class="text-primary">CONTACT US:</h2>
+      <p class="text-primary">Program Manager (AB TECHNOLOGIES)</p>
       <p>ICMTEM - 2024 | Kanyakumari, India</p>
       <p>Call: +91 9840511458</p>
       <p>WhatsApp: +91 9840511458</p>
@@ -132,16 +144,15 @@
 
     </div>
     <div class="col-md-4 bg-light" style="padding:10px;">
-      <h5>Venue</h5>
+      <p><b>VENUE</b></p>
       <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3949.683783072304!2d77.33839087021896!3d8.133639684476929!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3b04fae7b453d579%3A0xf4356d0b26d3dd2a!2sStella%20Mary&#39;s%20College%20Of%20Engineering!5e0!3m2!1sen!2sin!4v1709724089173!5m2!1sen!2sin" width="100%" height="250px" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
 
     </div>
   </div>
 </div>
-<br><br>
+
 </div>
-<br><br>
-<a href="static/IJATEM PAPER TEMPLATE.docx" download>Download Word Document</a>
+
 
 
 
