--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -72,7 +72,7 @@
 
     
 
-        <li class="nav-item dropdown">
+        <!-- <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle text-white" href="#" role="button" data-toggle="dropdown" aria-expanded="false">
             Committe
           </a>
@@ -84,8 +84,15 @@
           </div>
         </li>
 
-        &nbsp;
+        &nbsp; -->
       <!-- &nbsp;     &nbsp; &nbsp; &nbsp;      -->
+
+        <li class="nav-item">
+
+            <a class="nav-link text-white" href="/committee">Committee  </a>
+
+          </li>
+        &nbsp;
 
         <li class="nav-item">
 
