--- a/templates/index.html
+++ b/templates/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <html>
-  <title>ICMTEM</title>
+  <title>VS</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css" integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
@@ -42,7 +42,7 @@
    <br><br>
     <div class="container" >
     <h1 style="text-shadow: 2px 2px 4px #000000;font-weight:900;">International conference on Modern Trends in Engineering and Management (ICMTEM-24)</h1><br>
-    <h2 style="color:rgb(252 181 20);font-weight:900;">DATE: 02 APRIL 2024</h2><br>
+    <h2 style="color:rgb(252 181 20);font-weight:900;">DATE: 02 APRIL 2024 | HYBRID MODE</h2><br>
     <h3 style="font-weight:900;">Organized By</h3><br>
     <h3 style="text-shadow: 2px 2px 4px #000000;font-weight:900;">Department of Electrical and Electronics Engineering</h3><br>
     <h1 style="text-shadow: 2px 2px 4px #000000;font-weight:900;">STELLA MARY'S COLLEGE OF ENGINEERING</h1><br>
@@ -75,19 +75,20 @@
 <p style="text-align: justify;">Researchers, practicing engineers, academicians, scientists, and postgraduate students from all over the globe are invited to participate in this conference. It provides a platform to present research findings, discuss innovations, and foster collaboration.</p>
 </div>
 </div> 
-  <div class="col-md-3" style="padding-top:18px">
+  <div class="col-md-3" style="padding-top:10px">
     <h3 style="font-weight:900;font-size:1.8vw">IMPORTANT DATES</h3>
     <br>
-    <div class="  text-center text-white" style="padding:50px;background-image:linear-gradient(#A83279,#A83279)">
-      <h5>Full Paper Submission:<br> 26th March 2024 </h5>
+    <div class="  text-center text-white" style="padding:50px;background-image:linear-gradient(#780206,#780206)">
+      <h5  style="font-weight:900">Full Paper Submission:<br><br> 26th March 2024 </h5>
     </div>
     <br>
-    <div class=" bg-info text-center text-white" style="padding:50px;background-image:linear-gradient(#A83279,#A83279)">
-      <h5>Registration Deadline: <br>30th March 2024</h5>
+    <div class=" bg-info text-center text-white" style="padding:50px;background-image:linear-gradient(#780206
+,#780206)">
+      <h5  style="font-weight:900">Registration Deadline: <br><br>30th March 2024</h5>
     </div>
     <br>
-    <div class="bg-info text-center text-white" style="padding:50px;background-image:linear-gradient(#A83279,#A83279)">
-      <h5>Camera ready paper submission: <br>31st March 2024</h5>
+    <div class="bg-info text-center text-white" style="padding:50px;background-image:linear-gradient(#780206,#780206)">
+      <h5 style="font-weight:900">Camera ready paper submission: <br><br>31st March 2024</h5>
     </div>
     
   </div>
@@ -99,7 +100,7 @@
 
 <div class="container">
   <div class="row">
-    <div class="col-md-9" style="line-height: 200%;">
+    <div class="col-md-8" style="line-height: 200%;">
       <h1 style="font-weight:900;text-shadow: 2px 2px 4px #000000;">ABOUT COLLEGE</h1>
       <br>
       <p style="text-align: justify;font-size:1.3vw;line-height: 200%;text-indent:50px">Stella Mary's College of Engineering is founded and overseen by the Nova Educational Trust, under the leadership of Dr. Nazareth Charles, a respected business entrepreneur in Kanyakumari District. Dr. Charles, an Engineer by profession, is renowned for his philanthropic efforts aimed at uplifting the less fortunate, particularly women and the underprivileged members of society. Dedicated to creating skilled professionals with integrity, the institution strives to contribute to the nation and industry.</p>
@@ -108,12 +109,12 @@
      <p style="text-align: justify;font-size:1.3vw;line-height: 200%;text-indent:50px"> Stella Mary's College of Engineering adheres to global standards in teaching and research, demonstrating an unwavering commitment to excellence in nurturing innovative and entrepreneurial skills. This dedication has earned the institution accreditation from NAAC (National Assessment and Accreditation Council) for the overall institution and NBA (National Board of Accreditation) for the Departments of Mechanical Engineering and Computer Science Engineering within just nine years of its establishment.</p>
       <p style="text-align: justify;font-size:1.3vw;line-height: 200%;">The college has maintained an outstanding placement record, providing ample opportunities for students to achieve their career aspirations, including placements at the international level.</p>
     </div>
-    <div class="col-md-3">
-      <div >
-        <img src="static/images/CLG IMAGE 2.jpg" style="object-fit:cover;width:100%;height:350px">
+    <div class="col-md-4 pt-4">
+      <div class="h-50">
+        <img src="static/images/CLG IMAGE 2.jpg" style="object-fit:cover;width:100%;height:100%">
       </div> 
-      <div >
-        <img src="static/images/CLG IMAGE 1.jpg" style="object-fit:cover;width:100%;height:350px">
+      <div class="h-50">
+        <img src="static/images/CLG IMAGE 1.jpg" style="object-fit:cover;width:100%;height:100%">
       </div>
     </div>
   </div>
