--- a/templates/index.html
+++ b/templates/index.html
@@ -42,7 +42,7 @@
    <br><br>
     <div class="container" >
     <h1 style="text-shadow: 2px 2px 4px #000000;font-weight:900;">International conference on Modern Trends in Engineering and Management (ICMTEM-24)</h1><br>
-    <h2 style="color:rgb(252 181 20);font-weight:900;">DATE: 02 APRIL 2024 | HYBRID MODE</h2><br>
+    <h2 style="color:rgb(252 181 20);font-weight:900;">DATE: 02 APRIL 2024</h2><br>
     <h3 style="font-weight:900;">Organized By</h3><br>
     <h3 style="text-shadow: 2px 2px 4px #000000;font-weight:900;">Department of Electrical and Electronics Engineering</h3><br>
     <h1 style="text-shadow: 2px 2px 4px #000000;font-weight:900;">STELLA MARY'S COLLEGE OF ENGINEERING</h1><br>
@@ -55,17 +55,17 @@
   </div>
   <br><br><br>
 <div class="container">
-  <h1 style="font-weight:900;text-shadow: 2px 2px 4px #000000;">ABOUT ICMTEM 2024</h1>
+  <h1 style="font-weight:900;text-shadow: 2px 2px 4px #000000;">ABOUT ICMTEM 2024</h1><hr>
   <br>
-  <p style="text-align: justify;line-height: 200%;font-size:1.3vw;text-indent:100px">Recent developments in the fields of science, technology and engineering have contributed to an explosion of innovation in a wide variety of industries, including new product development and manufacturing, design and optimisation techniques, renewable energy, embedded technologies, smart grids,  robotics, structures and construction, big data, remote sensing and geographic information systems. The prestigious "ICMTEM 2024" conference seeks to provide a superior international platform for academics, researchers, engineers, industry participants, and students from all over the world to exchange experiences and research findings.  Energy-effective green technologies are being investigated to provide cost-effective solutions and better outputs across multiple sectors. The purpose of this conference is to explore new technologies and advances in science and engineering for superior engineering solutions by bringing together academics, researchers, and specialists from connected industries in a shared platform. Researchers will use this conference as a forum to showcase the results and discoveries of their work. Participants in this conference are invited from all over the world, including practicing engineers, academicians from various universities and engineering institutes, scientists from R&D institutions, research scholars, and postgraduate students.</p>
+  <p style="text-align: justify;line-height: 200%;font-size:18px;text-indent:100px">Recent developments in the fields of science, technology and engineering have contributed to an explosion of innovation in a wide variety of industries, including new product development and manufacturing, design and optimisation techniques, renewable energy, embedded technologies, smart grids,  robotics, structures and construction, big data, remote sensing and geographic information systems. The prestigious "ICMTEM 2024" conference seeks to provide a superior international platform for academics, researchers, engineers, industry participants, and students from all over the world to exchange experiences and research findings.  Energy-effective green technologies are being investigated to provide cost-effective solutions and better outputs across multiple sectors. The purpose of this conference is to explore new technologies and advances in science and engineering for superior engineering solutions by bringing together academics, researchers, and specialists from connected industries in a shared platform. Researchers will use this conference as a forum to showcase the results and discoveries of their work. Participants in this conference are invited from all over the world, including practicing engineers, academicians from various universities and engineering institutes, scientists from R&D institutions, research scholars, and postgraduate students.</p>
 </div>
 <br><br>
 <div class="container">
 <div class="row">
   <div class="col-md-9" style="line-height: 200%;">
-      <h1 style="font-weight:900;text-shadow: 2px 2px 4px #000000;">Objectives of the Conference</h1>
+      <h1 style="font-weight:900;text-shadow: 2px 2px 4px #000000;">Objectives of the Conference</h1><hr>
       <br>
-      <div style="font-size:1.3vw;padding-left:40px">
+      <div style="font-size:18px;">
       <p style="text-align: justify;"><b>Knowledge Sharing:</b> ICMTEM-24 aims to facilitate knowledge sharing among academicians, researchers, and experts from related industries. It provides a common forum for exploration of emerging technologies and innovations in engineering and science.</p>
   <p style="text-align: justify;"><b>Sustainable Development:</b> The conference focuses on sustainable development through digital transformation, innovations, and modernized technologies. It aims to promote global scientific collaborations and community partnerships.</p>
   <p style="text-align: justify;"><b>Environmental Responsibility:</b> ICMTEM-24 recognizes the importance of environmental responsibility in modern business sectors.</p>
@@ -76,7 +76,7 @@
 </div>
 </div> 
   <div class="col-md-3" style="padding-top:10px">
-    <h3 style="font-weight:900;font-size:1.8vw">IMPORTANT DATES</h3>
+    <h5 style="font-weight:900;" class="text-center">IMPORTANT DATES</h5>
     <br>
     <div class="  text-center text-white" style="padding:50px;background-image:linear-gradient(#780206,#780206)">
       <h5  style="font-weight:900">Full Paper Submission:<br><br> 26th March 2024 </h5>
@@ -101,18 +101,19 @@
 <div class="container">
   <div class="row">
     <div class="col-md-8" style="line-height: 200%;">
-      <h1 style="font-weight:900;text-shadow: 2px 2px 4px #000000;">ABOUT COLLEGE</h1>
+      <h1 style="font-weight:900;text-shadow: 2px 2px 4px #000000;">ABOUT COLLEGE</h1><hr>
       <br>
-      <p style="text-align: justify;font-size:1.3vw;line-height: 200%;text-indent:50px">Stella Mary's College of Engineering is founded and overseen by the Nova Educational Trust, under the leadership of Dr. Nazareth Charles, a respected business entrepreneur in Kanyakumari District. Dr. Charles, an Engineer by profession, is renowned for his philanthropic efforts aimed at uplifting the less fortunate, particularly women and the underprivileged members of society. Dedicated to creating skilled professionals with integrity, the institution strives to contribute to the nation and industry.</p>
-        <p style="text-align: justify;font-size:1.3vw;line-height: 200%;text-indent:50px">
+      <p style="text-align: justify;font-size:18px;line-height: 200%;text-indent:50px">Stella Mary's College of Engineering is founded and overseen by the Nova Educational Trust, under the leadership of Dr. Nazareth Charles, a respected business entrepreneur in Kanyakumari District. Dr. Charles, an Engineer by profession, is renowned for his philanthropic efforts aimed at uplifting the less fortunate, particularly women and the underprivileged members of society. Dedicated to creating skilled professionals with integrity, the institution strives to contribute to the nation and industry.</p>
+        <p style="text-align: justify;font-size:18px;line-height: 200%;text-indent:50px">
       The college provides a nurturing environment conducive to academic excellence, fostering leadership skills, and addressing all aspects essential for a successful career. Stella Mary's boasts cutting-edge infrastructure and is committed to delivering education structured around specific goals, systematically mapping and evaluating students' performance to develop their knowledge and skills.</p>
-     <p style="text-align: justify;font-size:1.3vw;line-height: 200%;text-indent:50px"> Stella Mary's College of Engineering adheres to global standards in teaching and research, demonstrating an unwavering commitment to excellence in nurturing innovative and entrepreneurial skills. This dedication has earned the institution accreditation from NAAC (National Assessment and Accreditation Council) for the overall institution and NBA (National Board of Accreditation) for the Departments of Mechanical Engineering and Computer Science Engineering within just nine years of its establishment.</p>
-      <p style="text-align: justify;font-size:1.3vw;line-height: 200%;">The college has maintained an outstanding placement record, providing ample opportunities for students to achieve their career aspirations, including placements at the international level.</p>
+     <p style="text-align: justify;font-size:18px;line-height: 200%;text-indent:50px"> Stella Mary's College of Engineering adheres to global standards in teaching and research, demonstrating an unwavering commitment to excellence in nurturing innovative and entrepreneurial skills. This dedication has earned the institution accreditation from NAAC (National Assessment and Accreditation Council) for the overall institution and NBA (National Board of Accreditation) for the Departments of Mechanical Engineering and Computer Science Engineering within just nine years of its establishment.</p>
+      <p style="text-align: justify;font-size:18px;line-height: 200%;">The college has maintained an outstanding placement record, providing ample opportunities for students to achieve their career aspirations, including placements at the international level.</p>
     </div>
     <div class="col-md-4 pt-4">
       <div class="h-50">
         <img src="static/images/CLG IMAGE 2.jpg" style="object-fit:cover;width:100%;height:100%">
       </div> 
+      <br>
       <div class="h-50">
         <img src="static/images/CLG IMAGE 1.jpg" style="object-fit:cover;width:100%;height:100%">
       </div>
@@ -129,8 +130,8 @@
   <br><br>
   <div class="container ">
   <div class="row">
-    <div class="col-md-4 " style="padding-top:30px">
-      <img src="static/ablg.png" width="140px"><br><br>
+    <div class="col-md-4 " style="padding-left: 40px;padding-top:30px">
+      <img src="static/images/ablg.png" width="140px"><br><br>
       <p style="text-align: justify;">ICMTEM-2024 The International Conference on Modern Trends in Engineering and Management (ICMTEM 2024) will be held on 02th April 2024 at Stella Mary’s College of Engineering, Kanyakumari, India.</p>
 
     </div>
