--- a/templates/ababtech.html
+++ b/templates/ababtech.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css" integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
   <link rel="stylesheet" href="static/style.css">
 </head>
-<body>
+<body style="background-color: #e9ecef;">
     <div class="mt-3">
         <marquee ><h5>Dates to Remember: Full Paper Submission: 26th March 2024 | Registration Deadline: 30th March 2024 | Camera ready paper submission: 31st March 2024</h5></marquee>
       </div>
@@ -18,29 +18,32 @@
             <div><h1 style="color: azure;">ABOUT AB TECHNOLOGIES</h1></div>
         </div>
 <br><br><br>
-        <div class="container">
-            <h1 >ABOUT AB TECHNOLOGIES</h1><br>
-            <p style="text-align: justify;"> AB Technologies is the best research centre that has been in business dealing with real time and IEEE projects for engineering students of all the departments. We are also engaged in developing Electrical and Electronic Products like Solar based Grid tied and Standalone inverters, Home UPS Inverter, Laboratory Equipment’s for Engineering Colleges. AB Technologies is specialist in Conducting Training and Courses on Embedded systems, Matlab, PCB and CAD design, Computer software, hardware and networking for various Disciplines of Engineering and Arts Students.</p>
-        </div>
-
         
-<br><br><br><br>
+
+        <div class="container bg-light p-5 shadow p-3 mb-5  rounded">
+          <h1 style="font-weight:900;text-shadow: 2px 2px 4px #000000;">ABOUT AB TECHNOLOGIES</h1><hr>
+          <br>
+          <p style="text-align: justify;line-height: 200%;font-size:18px;text-indent:100px">AB Technologies is the best research centre that has been in business dealing with real time and IEEE projects for engineering students of all the departments. We are also engaged in developing Electrical and Electronic Products like Solar based Grid tied and Standalone inverters, Home UPS Inverter, Laboratory Equipment’s for Engineering Colleges. AB Technologies is specialist in Conducting Training and Courses on Embedded systems, Matlab, PCB and CAD design, Computer software, hardware and networking for various Disciplines of Engineering and Arts Students.</p>
+        </div>
+        
+<br><br>
 
 
 
 
-<div class="jumbotron">
+<div class="jumbotron" style="margin:0px">
   <br><br>
   <div class="container ">
   <div class="row">
     <div class="col-md-4 " style="padding-top:30px">
-      <img src="static/ablg.png" width="140px"><br><br>
+      <img src="static/images/ablg.png" width="140px"><br><br>
       <p style="text-align: justify;">ICMTEM-2024 The International Conference on Modern Trends in Engineering and Management (ICMTEM 2024) will be held on 02th April 2024 at Stella Mary’s College of Engineering, Kanyakumari, India.</p>
 
     </div>
-    <div class="col-md-4 " style="padding-left: 40px;padding-top:30px">
-      <p>CONTACT US:</p>
-      <p>Program Manager (AB TECHNOLOGIES)</p>
+    <div class="col-md-4 " style="padding-left: 40px;padding-top: 30px">
+
+      <h2 class="text-primary">CONTACT US:</h2>
+      <p class="text-primary">Program Manager (AB TECHNOLOGIES)</p>
       <p>ICMTEM - 2024 | Kanyakumari, India</p>
       <p>Call: +91 9840511458</p>
       <p>WhatsApp: +91 9840511458</p>
@@ -48,15 +51,14 @@
 
     </div>
     <div class="col-md-4 bg-light" style="padding:10px;">
-      <h5>Venue</h5>
+      <p><b>VENUE</b></p>
       <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3949.683783072304!2d77.33839087021896!3d8.133639684476929!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3b04fae7b453d579%3A0xf4356d0b26d3dd2a!2sStella%20Mary&#39;s%20College%20Of%20Engineering!5e0!3m2!1sen!2sin!4v1709724089173!5m2!1sen!2sin" width="100%" height="250px" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
 
     </div>
   </div>
 </div>
-<br><br>
+
 </div>
-<br><br>
 
 
 </body>
