--- a/templates/abstella.html
+++ b/templates/abstella.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css" integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
     <link rel="stylesheet" href="static/style.css">
 </head>
-<body>
+<body style="background-color: #e9ecef;">
     <div class="mt-3">
         <marquee ><h5>Dates to Remember: Full Paper Submission: 26th March 2024 | Registration Deadline: 30th March 2024 | Camera ready paper submission: 31st March 2024</h5></marquee>
       </div>
@@ -23,31 +23,45 @@
         <br><br><br>
 
 
-<div class="container">
-      <h1>ABOUT COLLEGE</h1>
-      <br>
-      <p style="text-align: justify;">Stella Mary’s College of Engineering is promoted by the Nova Educational Trust & established by the well-known business entrepreneur of Kanyakumari District, Dr. Nazareth Charles. The college is located amidst a beautiful eco-friendly atmosphere surrounded by coconut groves. The college is only miles away from the Azhikal Sea Shore, Manavalakurichy, Kanyakumari District, Tamil Nadu. Stella Mary’s College of Engineering offers Bachelors Degree Programmes in the branches of Artificial Intelligence & Data Science, Civil Engineering, Computer Science and Engineering, Electrical and Electronics Engineering, Electronics and Communication Engineering and Mechanical Engineering etc.</p>
-    
-  
-</div>
+        <div class="container bg-light p-5 shadow p-3 mb-5  rounded">
+          <div class="row">
+            <div class="col-md-8" style="line-height: 200%;">
+              <h1 style="font-weight:900;text-shadow: 2px 2px 4px #000000;">ABOUT COLLEGE</h1><hr>
+              <br>
+              <p style="text-align: justify;font-size:18px;line-height: 200%;text-indent:50px">Stella Mary's College of Engineering is founded and overseen by the Nova Educational Trust, under the leadership of Dr. Nazareth Charles, a respected business entrepreneur in Kanyakumari District. Dr. Charles, an Engineer by profession, is renowned for his philanthropic efforts aimed at uplifting the less fortunate, particularly women and the underprivileged members of society. Dedicated to creating skilled professionals with integrity, the institution strives to contribute to the nation and industry.</p>
+                <p style="text-align: justify;font-size:18px;line-height: 200%;text-indent:50px">
+              The college provides a nurturing environment conducive to academic excellence, fostering leadership skills, and addressing all aspects essential for a successful career. Stella Mary's boasts cutting-edge infrastructure and is committed to delivering education structured around specific goals, systematically mapping and evaluating students' performance to develop their knowledge and skills.</p>
+             <p style="text-align: justify;font-size:18px;line-height: 200%;text-indent:50px"> Stella Mary's College of Engineering adheres to global standards in teaching and research, demonstrating an unwavering commitment to excellence in nurturing innovative and entrepreneurial skills. This dedication has earned the institution accreditation from NAAC (National Assessment and Accreditation Council) for the overall institution and NBA (National Board of Accreditation) for the Departments of Mechanical Engineering and Computer Science Engineering within just nine years of its establishment.</p>
+              <p style="text-align: justify;font-size:18px;line-height: 200%;">The college has maintained an outstanding placement record, providing ample opportunities for students to achieve their career aspirations, including placements at the international level.</p>
+            </div>
+            <div class="col-md-4 pt-4">
+              <div class="h-50">
+                <img src="static/images/CLG IMAGE 2.jpg" style="object-fit:cover;width:100%;height:100%">
+              </div> 
+              <div class="h-50">
+                <img src="static/images/CLG IMAGE 1.jpg" style="object-fit:cover;width:100%;height:100%">
+              </div>
+            </div>
+          </div>
+        </div>
 
-<br><br><br><br>
+<br><br>
 
 
 
-
-<div class="jumbotron">
+<div class="jumbotron" style="margin:0px">
   <br><br>
   <div class="container ">
   <div class="row">
     <div class="col-md-4 " style="padding-top:30px">
-      <img src="static/ablg.png" width="140px"><br><br>
+      <img src="static/images/ablg.png" width="140px"><br><br>
       <p style="text-align: justify;">ICMTEM-2024 The International Conference on Modern Trends in Engineering and Management (ICMTEM 2024) will be held on 02th April 2024 at Stella Mary’s College of Engineering, Kanyakumari, India.</p>
 
     </div>
-    <div class="col-md-4 " style="padding-left: 40px;padding-top:30px">
-      <p>CONTACT US:</p>
-      <p>Program Manager (AB TECHNOLOGIES)</p>
+    <div class="col-md-4 " style="padding-left: 40px;padding-top: 30px">
+
+      <h2 class="text-primary">CONTACT US:</h2>
+      <p class="text-primary">Program Manager (AB TECHNOLOGIES)</p>
       <p>ICMTEM - 2024 | Kanyakumari, India</p>
       <p>Call: +91 9840511458</p>
       <p>WhatsApp: +91 9840511458</p>
@@ -55,15 +69,16 @@
 
     </div>
     <div class="col-md-4 bg-light" style="padding:10px;">
-      <h5>Venue</h5>
+      <p><b>VENUE</b></p>
       <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3949.683783072304!2d77.33839087021896!3d8.133639684476929!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3b04fae7b453d579%3A0xf4356d0b26d3dd2a!2sStella%20Mary&#39;s%20College%20Of%20Engineering!5e0!3m2!1sen!2sin!4v1709724089173!5m2!1sen!2sin" width="100%" height="250px" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
 
     </div>
   </div>
 </div>
-<br><br>
+
 </div>
-<br><br>
+
+
 </body>
 <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
