--- a/templates/callforpaper.html
+++ b/templates/callforpaper.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css" integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
   <link rel="stylesheet" href="static/style.css">
 </head>
-<body>
+<body style="background-color: #e9ecef;">
     <div class="mt-3">
         <marquee ><h5>Dates to Remember: Full Paper Submission: 26th March 2024 | Registration Deadline: 30th March 2024 | Camera ready paper submission: 31st March 2024</h5></marquee>
       </div>
@@ -19,42 +19,45 @@
         </div>
 <br><br><br>
 
-<div class="container">
-    <h1 >CALL FOR PAPER</h1>
-    <br>
-    <p>Authors and scholars from India and abroad are invited to submit original unpublished research articles relevant to the field of the ICMTEM 2024 conference. ICMTEM 2024 endeavor to publish high quality original research papers, review papers, case studies, and technical notes. All papers in the conference will have to undergo rigorous peer review process.</p>
-    </div>
-<br><br><br>
-
-<div class="container">
-    <p>Track 1: Artificial Intelligence and Data Sciences</p>
-    <p>Track 2: Bio-Medical Engineering</p>
-    <p>Track 3: Civil Engineering</p>
-    <p>Track 4: Computer Science and Engineering</p>
-    <p>Track 5: Electronics and Communication Engineering</p>
-    <p>Track 6: Electronics and Instrumentation Engineering</p>
-    <p>Track 7: Electrical and Electronics Engineering</p>
-    <p>Track 8: Mechanical Engineering</p>
-    <p>Track 9: MCA and MBA</p>
+<div class="container bg-light p-5 shadow p-3 mb-5  rounded">
+  <h1 class="text-center" style="color:rgb(29, 29, 204); font-weight:900;text-shadow: 2px 2px 4px #000000;">CALL FOR PAPER</h1><hr>
+  <br>
+  <p style="text-align: justify;line-height: 200%;font-size:18px;text-indent:100px">Authors and scholars from India and abroad are invited to submit original unpublished research articles relevant to the field of the ICMTEM 2024 conference. ICMTEM 2024 endeavor to publish high quality original research papers, review papers, case studies, and technical notes. All papers in the conference will have to undergo rigorous peer review process.</p>
 </div>
 
-<br><br><br><br>
+
+<br><br><br>
+<div style="display: flex;align-items:center">
+<div class="container bg-light p-5 shadow p-3 mb-5  rounded w-50" >
+    <h3 style="text-align: justify;line-height: 200%;font-size:20px;"><b>Track 1:</b> Artificial Intelligence and Data Sciences</h3>
+    <h3 style="text-align: justify;line-height: 200%;font-size:20px;"><b>Track 2:</b> Bio-Medical Engineering</h3>
+    <h3 style="text-align: justify;line-height: 200%;font-size:20px;"><b>Track 3:</b> Civil Engineering</h3>
+    <h3 style="text-align: justify;line-height: 200%;font-size:20px;"><b>Track 4:</b> Computer Science and Engineering</h3>
+    <h3 style="text-align: justify;line-height: 200%;font-size:20px;"><b>Track 5:</b> Electronics and Communication Engineering</h3>
+    <h3 style="text-align: justify;line-height: 200%;font-size:20px;"><b>Track 6:</b> Electronics and Instrumentation Engineering</h3>
+    <h3 style="text-align: justify;line-height: 200%;font-size:20px;"><b>Track 7:</b> Electrical and Electronics Engineering</h3>
+    <h3 style="text-align: justify;line-height: 200%;font-size:20px;"><b>Track 8:</b> Mechanical Engineering</h3>
+    <h3 style="text-align: justify;line-height: 200%;font-size:20px;"><b>Track 9:</b> MCA and MBA</h3>
+</div>
+</div>
+<br><br>
 
 
 
 
-<div class="jumbotron">
+<div class="jumbotron" style="margin:0px">
   <br><br>
   <div class="container ">
   <div class="row">
     <div class="col-md-4 " style="padding-top:30px">
-      <img src="static/ablg.png" width="140px"><br><br>
+      <img src="static/images/ablg.png" width="140px"><br><br>
       <p style="text-align: justify;">ICMTEM-2024 The International Conference on Modern Trends in Engineering and Management (ICMTEM 2024) will be held on 02th April 2024 at Stella Mary’s College of Engineering, Kanyakumari, India.</p>
 
     </div>
-    <div class="col-md-4 " style="padding-left: 40px;padding-top:30px">
-      <p>CONTACT US:</p>
-      <p>Program Manager (AB TECHNOLOGIES)</p>
+    <div class="col-md-4 " style="padding-left: 40px;padding-top: 30px">
+
+      <h2 class="text-primary">CONTACT US:</h2>
+      <p class="text-primary">Program Manager (AB TECHNOLOGIES)</p>
       <p>ICMTEM - 2024 | Kanyakumari, India</p>
       <p>Call: +91 9840511458</p>
       <p>WhatsApp: +91 9840511458</p>
@@ -62,15 +65,14 @@
 
     </div>
     <div class="col-md-4 bg-light" style="padding:10px;">
-      <h5>Venue</h5>
+      <p><b>VENUE</b></p>
       <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3949.683783072304!2d77.33839087021896!3d8.133639684476929!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3b04fae7b453d579%3A0xf4356d0b26d3dd2a!2sStella%20Mary&#39;s%20College%20Of%20Engineering!5e0!3m2!1sen!2sin!4v1709724089173!5m2!1sen!2sin" width="100%" height="250px" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
 
     </div>
   </div>
 </div>
-<br><br>
+
 </div>
-<br><br>
 
 </body>
 
