--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -1,4 +1,5 @@
-<nav class="navbar navbar-expand-lg navbar-dark   " style="background-image:linear-gradient(#2071a0,#266d96);font-weight:900;">
+<nav class="navbar navbar-expand-lg navbar-dark   " style="background-image:linear-gradient(#00b4db
+,#0083b0);font-weight:900;">
 
   
 
@@ -68,7 +69,12 @@
         &nbsp;
          <!-- &nbsp; &nbsp; &nbsp;&nbsp;  -->
 
-      
+         <li class="nav-item">
+
+          <a class="nav-link text-white" href="/committee">Committee  </a>
+
+        </li>
+      &nbsp;
 
     
 
@@ -86,13 +92,6 @@
 
         &nbsp; -->
       <!-- &nbsp;     &nbsp; &nbsp; &nbsp;      -->
-
-        <li class="nav-item">
-
-            <a class="nav-link text-white" href="/committee">Committee  </a>
-
-          </li>
-        &nbsp;
 
         <li class="nav-item">
 
