--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -93,12 +93,12 @@
         &nbsp; -->
       <!-- &nbsp;     &nbsp; &nbsp; &nbsp;      -->
 
-        <li class="nav-item">
+        <!-- <li class="nav-item">
 
           <a class="nav-link text-white" href="registrationandpayments">Keynotespeakers</a>
 
         </li>
-        &nbsp;
+        &nbsp; -->
         <!-- &nbsp;&nbsp;&nbsp;&nbsp;  -->
      
         
@@ -141,15 +141,15 @@
         </li>
         &nbsp; -->
         
-        <li class="nav-item">
+        <!-- <li class="nav-item">
 
           <a class="nav-link text-white" href="/journals">Journals</a>
 
         </li>
-          &nbsp;
+          &nbsp; -->
         
           <!-- &nbsp;     &nbsp; -->
-        <li class="nav-item dropdown">
+        <!-- <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle text-white" href="#" role="button" data-toggle="dropdown" aria-expanded="false">
            Sponsor
           </a>
@@ -160,7 +160,7 @@
             <a class="dropdown-item" href="#">Something else here</a>
           </div>
         </li>
-        &nbsp;
+        &nbsp; -->
 
         <li class="nav-item">
 
@@ -168,18 +168,18 @@
 
         </li>
           &nbsp;
-        <li class="nav-item">
+        <!-- <li class="nav-item">
 
-          <a class="nav-link text-white" href="importantdates">Venue</a>
-
-        </li>
-          &nbsp;
-        <li class="nav-item">
-
-          <a class="nav-link text-white" href="importantdates">Contactus</a>
+          <a class="nav-link text-white" href="/">Venue</a>
 
         </li>
-          &nbsp;
+          &nbsp; -->
+        <!-- <li class="nav-item">
+
+          <a class="nav-link text-white" href="/contactus">Contactus</a>
+
+        </li>
+          &nbsp; -->
         
 
         </ul>
