--- a/templates/wca.html
+++ b/templates/wca.html
@@ -23,10 +23,10 @@
     
         <div class="container bg-light p-5 shadow p-3 mb-5  rounded w-50" >
             <h1 style="color: darkblue;font-size:30px;">Who Can Attend Conference?</h1>
-            <div style="padding-left: 30px;">
-            <h2 style="line-height: 200%;font-size:18px;">Research Scholars. </h2>
-            <h2 style="line-height: 200%;font-size:18px;">UG/PG Students</h2>
-            <h2 style="line-height: 200%;font-size:18px;">Faculties</h2>
+            <div >
+            <h2 style="line-height: 200%;font-size:18px;">&#9733;Research Scholars. </h2>
+            <h2 style="line-height: 200%;font-size:18px;">&#9733;UG/PG Students</h2>
+            <h2 style="line-height: 200%;font-size:18px;">&#9733;Faculties</h2>
         </div>
         </div>
         
