--- a/templates/committee.html
+++ b/templates/committee.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css" integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
     <link rel="stylesheet" href="static/style.css">
 </head>
-<body>
+<body style="background-color: #e9ecef;">
     <div class="mt-3">
         <marquee ><h5>Dates to Remember: Full Paper Submission: 26th March 2024 | Registration Deadline: 30th March 2024 | Camera ready paper submission: 31st March 2024</h5></marquee>
       </div>
@@ -22,12 +22,12 @@
 
         <br><br><br>
 
-        <div class="container jumbotron p-5 shadow p-3 mb-5  rounded" >
+        <div class="container jumbotron p-5 shadow p-3 mb-5 bg-light rounded" >
             <div>
             <h1 class="text-center" style="color:darkblue;font-weight:900">CONVENER</h1><hr>
         </div>
         <center>
-        <div class="bg-info  text-white" style="width:500px;height: 200px;box-sizing:border-box;padding:10px;background-image:linear-gradient(to left,#00b4db
+        <div class=" text-white" style="width:500px;height: 200px;box-sizing:border-box;padding:10px;background-image:linear-gradient(to left,#00b4db
 ,#0083b0);">
             <h1 style="font-size:2vw;font-weight:900">Dr. A. R. Gayathri</h1><hr class="bg-light">
             <h3 style="font-size:1.5vw">Associate Professor&Head</h3>
@@ -37,7 +37,7 @@
         </center>
         </div>
 <br><br><br>
-<div class="container text-center jumbotron p-5 shadow p-3 mb-5  rounded" >
+<div class="container text-center jumbotron p-5 shadow p-3 mb-5 bg-light rounded" >
     <h1 class="text-center" style="color:darkblue;font-weight:900">CO- CONVENERS</h1><hr>
         <div style="display: flex;flex-wrap:wrap;justify-content:space-around;">
             <div class="bg-info  mt-5 text-white" style="width:500px;height: 200px;box-sizing:border-box;padding:10px;background-image:linear-gradient(to left,#00b4db,#0083b0)">
@@ -75,7 +75,7 @@
 
 
     <br><br><br>
-<div class="container text-center jumbotron p-5 shadow p-3 mb-5  rounded" >
+<div class="container text-center jumbotron p-5 shadow p-3 mb-5 bg-light rounded" >
     <h1 class="text-center" style="color:darkblue;font-weight:900">CO-ORDINATORS</h1><hr>
         <div style="display: flex;flex-wrap:wrap;justify-content:space-around;" class="text-white">
             <div class="bg-info  mt-5" style="width:500px;height: 200px;box-sizing:border-box;padding:10px;background-image:linear-gradient(to left,#00b4db,#0083b0)">
