--- a/templates/presentationguide.html
+++ b/templates/presentationguide.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css" integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
     <link rel="stylesheet" href="static/style.css">
 </head>
-<body>
+<body style="background-color: #e9ecef;">
     <div class="mt-3">
         <marquee ><h5>Dates to Remember: Full Paper Submission: 26th March 2024 | Registration Deadline: 30th March 2024 | Camera ready paper submission: 31st March 2024</h5></marquee>
       </div>
@@ -21,42 +21,57 @@
         </div>
         
         <br><br><br>
-        <div class="container">
-            <h1>Oral Presenter</h1><hr>
-            <p style="text-align: justify;">As an oral presenter, you have to successfully interact with the audience in a live presentation while also facilitating fruitful discussions. For oral presenters, the registration price packages (Registration Link) offer numerous advantages. </p>
-            <h2>Guidelines for Presentation</h2>
-            <p style="text-align: justify;">•	Think about the order and relevancy of your slides. The path from one slide to the next should be constructed.</p>
-        <p style="text-align: justify;">•	Make utilisation of charts and graphs to highlight your main points. They will aid with the audience's comprehension of the content.</p>
-        <p style="text-align: justify;">•	Make it easy. The viewer’s get confused when there are too many complex graphs and charts with a lot of data and figures. Avoid using gif graphics, flash, and vibrant colours. Not your message, but only those effects will stick with the viewers. Make it easy!</p>
-        <p style="text-align: justify;">•	Use the 6-6-6 rule: (maximum 6 words per bullet, maximum 6 bullets per slide, and maximum 6 text slides in a row). The fewest words with effective imagery will have the most powerful effect.</p>
-        <p style="text-align: justify;">•	Choose easy-to-read fonts with strong contrast that are compatible with most computers. Italics, ALL CAPS, and other distracting and congested additions should not be used. A minimum font size of 30 points is a righteous guidelines.</p>
-    
-        <h2>Presenting Effectively</h2>
-        <p style="text-align: justify;">Make your presentation effective and keep the audience interested throughout your presentation.</p>
-    </div>
+        <div class="container bg-light p-5 shadow p-3 mb-5  rounded">
+            <h1 class="text-center" style="font-weight:900;text-shadow: 2px 2px 4px #000000;">ORAL PRESENTER</h1><hr>
+            <div style="line-height: 200%;font-size:18px">
+            <p style="text-align: justify;text-indent:100px">As an oral presenter, you have to successfully interact with the audience in a live presentation while also facilitating fruitful discussions. For oral presenters, the registration price packages (Registration Link) offer numerous advantages. </p>
+            <br>
+            <h2 class="text-danger" style="font-weight: 900;">Guidelines for Presentation</h2>
+            <div style="padding:20px ;">
+            <p style="text-align: justify;">&#9733;	Think about the order and relevancy of your slides. The path from one slide to the next should be constructed.</p>
+        <p style="text-align: justify;">&#9733; Make utilisation of charts and graphs to highlight your main points. They will aid with the audience's comprehension of the content.</p>
+        <p style="text-align: justify;">&#9733; Make it easy. The viewer’s get confused when there are too many complex graphs and charts with a lot of data and figures. Avoid using gif graphics, flash, and vibrant colours. Not your message, but only those effects will stick with the viewers. Make it easy!</p>
+        <p style="text-align: justify;">&#9733; Use the 6-6-6 rule: (maximum 6 words per bullet, maximum 6 bullets per slide, and maximum 6 text slides in a row). The fewest words with effective imagery will have the most powerful effect.</p>
+        <p style="text-align: justify;">&#9733; Choose easy-to-read fonts with strong contrast that are compatible with most computers. Italics, ALL CAPS, and other distracting and congested additions should not be used. A minimum font size of 30 points is a righteous guidelines.</p>
+      </div>
+      </div>  <br>
+      <h2 class="text-danger" style="font-weight: 900;">Presenting Effectively</h2>
+      <div style="padding:20px ;">
+      
+        <p style="text-align: justify;font-size:18px">Make your presentation effective and keep the audience interested throughout your presentation.</p>
+      </div>
+      </div>
 
     <br>
-        <div class="container">
-            <h1>Poster Presenters</h1><hr>
-            <p style="text-align: justify;">Presenting your work to an audience through a poster allows you to do it in an efficient manner. Each author is given a display area at a poster session, where they can present diagrams, graphics, data, images, and tiny amounts of text instead of giving a formal oral presentation.</p>
-            <h2>Visual Guideline for Poster</h2>
-            <h3>Poster Size</h3>
-            <p style="text-align: justify;">The posters are two feet by three feet (width by two and height by three). Please make sure that this is the maximum size for your poster.</p>
-            <h3>Poster Submission</h3>
-            <p style="text-align: justify;">At the registration counter, please make ensure to provide the poster to the organising committee.</p>
-            <h3>Poster Viewing Session & Evaluation</h3>
-            <p style="text-align: justify;">In the conference schedule, there is a designated time for seeing posters. Please make sure to remain near your poster(s) so that questions and discussions are made throughout that time.</p>
-            <p style="text-align: justify;"> During the designated poster presentation period, poster presenters can respond to questions, provide clarification, share contact details, and engage in a thorough discussion of the subject matter with visitors who are examining the exhibits.</p>
-        
+        <div class="container bg-light p-5 shadow p-3 mb-5  rounded">
+            <h1 class="text-center" style="font-weight:900;text-shadow: 2px 2px 4px #000000;">POSTER PRESENTERS</h1><hr>
+            <div style="line-height: 200%;font-size:18px">
+            <p style="text-align: justify;text-indent:100px">Presenting your work to an audience through a poster allows you to do it in an efficient manner. Each author is given a display area at a poster session, where they can present diagrams, graphics, data, images, and tiny amounts of text instead of giving a formal oral presentation.</p>
+            <h2 class="text-danger" style="font-weight: 900;">Visual Guideline for Poster</h2>
+            <div style="padding: 20px;">
+            <h3 style="font-weight: 900;">Poster Size</h3>
+            <p style="text-align: justify;text-indent:100px">The posters are two feet by three feet (width by two and height by three). Please make sure that this is the maximum size for your poster.</p>
+         
+            <h3 style="font-weight: 900;">Poster Submission</h3>
+            <p style="text-align: justify;text-indent:100px">At the registration counter, please make ensure to provide the poster to the organising committee.</p>
+          
+            <h3 style="font-weight: 900;">Poster Viewing Session & Evaluation</h3>
+            
+            <p style="text-align: justify;text-indent:100px">In the conference schedule, there is a designated time for seeing posters. Please make sure to remain near your poster(s) so that questions and discussions are made throughout that time.</p>
+            <p style="text-align: justify;text-indent:100px"> During the designated poster presentation period, poster presenters can respond to questions, provide clarification, share contact details, and engage in a thorough discussion of the subject matter with visitors who are examining the exhibits.</p>
+          </div>
+          </div>
         </div>
 
 
         <br><br>
-        <div class="container">
-            <h1>Virtual Presenters</h1><hr>
-            <p style="text-align: justify;">We provide virtual presentations for your convenience whether, for financial or other reasons, you are unavailable to attend the conference in person but still would like your paper to be presented and published.</p>
-            <p style="text-align: justify;">Two varieties of virtual presentations are offered. (i) Live video presenter (ii) PowerPoint virtual presentation.</p>
-        </div>
+        <div class="container bg-light p-5 shadow p-3 mb-5  rounded">
+            <h1 class="text-center" style="font-weight:900;text-shadow: 2px 2px 4px #000000;">VIRTUAL PRESENTERS</h1><hr>
+            <div style="line-height: 200%;font-size:18px">
+            <p style="text-align: justify;text-indent:100px">We provide virtual presentations for your convenience whether, for financial or other reasons, you are unavailable to attend the conference in person but still would like your paper to be presented and published.</p>
+            <p style="text-align: justify;text-indent:100px">Two varieties of virtual presentations are offered. (i) Live video presenter (ii) PowerPoint virtual presentation.</p>
+          </div>
+          </div>
 
         <br><br><br>
 
@@ -88,9 +103,9 @@
             </div>
           </div>
         </div>
-        <br><br>
+        
         </div>
-        <br><br>
+        
 
     
 </body>
